--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 PyJWT==2.10.1
 python-decouple==3.8
+python-dotenv==1.0.1
 python3-openid==3.2.0
 pytz==2025.1
 PyYAML==6.0.2
