--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ djoser==2.3.1
 drf-yasg==1.21.8
 fastapi==0.115.8
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 Markdown==3.7
 oauthlib==3.2.2
 packaging==24.2
 phonenumbers==8.13.53
+psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
